--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,19 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
+				    <encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
+		    <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-resources-plugin</artifactId>
+		        <version>2.2</version>
+		        <configuration>
+		            <encoding>${project.build.sourceEncoding}</encoding>
+		        </configuration>
+		    </plugin>
 		</plugins>
 	</build>
 	<repositories>
@@ -68,4 +77,8 @@
 			<url>http://download.java.net/maven/2</url>
 		</repository>
 	</repositories>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
+
