--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
 			<version>2.7.6</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.scala-tools.testing</groupId>
+			<artifactId>specs</artifactId>
+			<version>1.6.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
