--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.jackrabbit</groupId>
 			<artifactId>jackrabbit-core</artifactId>
 			<version>1.6.0</version>
