--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,12 @@
 		<dependency>
 			<groupId>org.apache.velocity</groupId>
 			<artifactId>velocity</artifactId>
-			<version>1.6.1</version>
+			<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity-tools</artifactId>
+			<version>2.0-beta4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.jackrabbit</groupId>
