Add asset save paths to properties files

--- a/src/main/resources/defaults/wknyc.local.properties
+++ b/src/main/resources/defaults/wknyc.local.properties
@@ -1,2 +1,5 @@
 org.apache.jackrabbit.repository.home=target/repository
 org.apache.jackrabbit.repository.conf=repository.mem.xml
+wknyc.uploads.images=target/assets/images
+wknyc.uploads.downloads=target/assets/downloads
+wknyc.uploads.files=target/assets/files
