--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 			<version>2.0-beta4</version>
 		</dependency>
 		<dependency>
+			<groupId>bryanjswift</groupId>
+			<artifactId>simple-velocity</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.jackrabbit</groupId>
 			<artifactId>jackrabbit-core</artifactId>
 			<version>1.6.0</version>
