Revert to velocity-tools 1.4
velocity-tools-2.0-beta4 wasn't providing the easily configurable
functionality I wanted so I'm reverting to velocity-tools-1.4 and
building what I need on top of it. This has the added benefit of
removing all the struts jars which were not being used.

--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
 			<version>1.6.2</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.velocity</groupId>
+			<groupId>velocity-tools</groupId>
 			<artifactId>velocity-tools</artifactId>
-			<version>2.0-beta4</version>
+			<version>1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>bryanjswift</groupId>
