--- a/src/main/resources/velocity/velocity.properties
+++ b/src/main/resources/velocity/velocity.properties
@@ -1,10 +1,9 @@
-resource.loader=webapp
-webapp.loader.description=Velocity Webapp Resource Loader
-webapp.resource.loader.class=org.apache.velocity.tools.view.WebappResourceLoader
-webapp.resource.loader.path=/templates/
-webapp.resource.loader.cache=false
+resource.loader=file
+file.loader.description=Velocity Webapp Resource Loader
+file.resource.loader.class=org.apache.velocity.runtime.resource.loader.FileResourceLoader
+file.resource.loader.path=/Volumes/Freelance/wknyc/webapp/templates
+file.resource.loader.cache=false
 velocimacro.library=macros.vm
 velocimacro.library.autoreload=false
 runtime.log.logsystem.class=velocity.Log
 runtime.log.logsystem.log4j.category=velocity.Log
-
