Add Startup Servlet for WebappResourceLoader

--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>wknyc.com</display-name>
+<!-- Startup Servlet for WebappResourceLoader ... No purpose except to setup ServletContext -->
+	<servlet>
+		<servlet-name>Startup Servlet for WebappResourceLoader</servlet-name>
+		<servlet-class>velocity.resource.loader.WebappResourceLoaderStartupServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
 <!-- Jersey Webservice Servlet -->
 	<servlet>
 		<servlet-name>Jersey Servlet</servlet-name>
@@ -22,7 +28,7 @@
 		<servlet-class>org.apache.velocity.tools.view.servlet.VelocityViewServlet</servlet-class>
 		<init-param>
 			<param-name>org.apache.velocity.toolbox</param-name>
-			<param-value>/WEB-INF/tools.xml</param-value>
+			<param-value>/WEB-INF/toolbox.xml</param-value>
 		</init-param>
 		<init-param>
 			<param-name>org.apache.velocity.properties</param-name>
