Change debug level from INFO to WARN

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,5 +12,5 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%p %d [%t] %-5p %c - %m%n
 
 log4j.logger.org=WARN
-log4j.logger.wknyc=INFO
-log4j.logger.velocity=INFO
+log4j.logger.wknyc=WARN
+log4j.logger.velocity=WARN
