--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ nb-configuration.xml
 nbactions.xml
 project
 src/main/resources/wknyc.properties
+tags
 target
 webapp/WEB-INF/classes
 webapp/WEB-INF/lib
