--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,6 @@
 			<version>1.6.2</version>
 		</dependency>
 		<dependency>
-			<groupId>velocity-tools</groupId>
-			<artifactId>velocity-tools</artifactId>
-			<version>1.4</version>
-		</dependency>
-		<dependency>
 			<groupId>bryanjswift</groupId>
 			<artifactId>simple-velocity</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
@@ -49,6 +44,11 @@
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-server</artifactId>
 			<version>1.1.2-ea</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
