Upgrade to 0.2.1 of simple-velocity

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>bryanjswift</groupId>
 			<artifactId>simple-velocity</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>0.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.jackrabbit</groupId>
