Reorganize properties alphabetically and add wknyc.upload.temp

--- a/src/main/resources/defaults/wknyc.dev.properties
+++ b/src/main/resources/defaults/wknyc.dev.properties
@@ -1,5 +1,6 @@
 org.apache.jackrabbit.repository.home=repository
 org.apache.jackrabbit.repository.conf=repository.fs.xml
-wknyc.uploads.images=assets/images
 wknyc.uploads.downloads=assets/downloads
 wknyc.uploads.files=assets/files
+wknyc.uploads.images=assets/images
+wknyc.uploads.temp=assets/temp
