--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,9 @@
 			<version>1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>1.6</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.10</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
-			<version>2.7.6</version>
+			<version>2.7.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.scala-tools.testing</groupId>
