Add url-pattern elements to allow alternate response types

--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -36,6 +36,10 @@
 	<servlet-mapping>
 		<servlet-name>login</servlet-name>
 		<url-pattern>/credentials/login</url-pattern>
+<!--
+		<url-pattern>/credentials/login.xml</url-pattern>
+		<url-pattern>/credentials/login.json</url-pattern>
+-->
 	</servlet-mapping>
 <!-- Define wknyc Register Servlet -->
 	<servlet>
@@ -45,6 +49,10 @@
 	<servlet-mapping>
 		<servlet-name>registerUser</servlet-name>
 		<url-pattern>/credentials/register</url-pattern>
+<!--
+		<url-pattern>/credentials/register.xml</url-pattern>
+		<url-pattern>/credentials/register.json</url-pattern>
+-->
 	</servlet-mapping>
 <!-- Define wknyc Image Upload Servlet -->
 	<servlet>
@@ -54,6 +62,8 @@
 	<servlet-mapping>
 		<servlet-name>imageUpload</servlet-name>
 		<url-pattern>/assets/imageUpload</url-pattern>
+		<url-pattern>/assets/imageUpload.xml</url-pattern>
+		<url-pattern>/assets/imageUpload.json</url-pattern>
 	</servlet-mapping>
 <!-- List welcome files -->
 	<welcome-file-list>
