--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,13 +4,13 @@ log4j.rootLogger=WARN, console
 # Pattern to output the caller's file name and line number.
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%p [%t] (%F:%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%p %d %c - %m%n
 
 # console is set to be a ConsoleAppender and uses PatternLayout.
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%p %d [%t] %-5p %c - %m%n
+log4j.appender.console.layout.ConversionPattern=%p %d %c - %m%n
 
 log4j.logger.org=WARN
-log4j.logger.wknyc=WARN
-log4j.logger.velocity=WARN
+log4j.logger.wknyc=INFO
+log4j.logger.velocity=INFO
