--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
 			<version>2.7.7</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
 			<groupId>org.scala-tools.testing</groupId>
 			<artifactId>specs</artifactId>
 			<version>1.6.0</version>
