--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -28,6 +28,17 @@
 		<servlet-name>Jersey Servlet</servlet-name>
 		<url-pattern>/wk/v1/*</url-pattern>
 	</servlet-mapping>
+<!-- Define Spring servlet information -->
+	<servlet>
+		<servlet-name>wknyc</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>wknyc</servlet-name>
+		<url-pattern>*.htm</url-pattern>
+	</servlet-mapping>
 <!-- Define wknyc Login Servlet -->
 	<servlet>
 		<servlet-name>login</servlet-name>
