Update MappingServlet to extract data from the path
Try and handle additional /client urls with ClientServlet.

--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -64,7 +64,7 @@
 			<param-value>client/client-list.vm</param-value>
 		</init-param>
 		<init-param>
-			<param-name>_</param-name>
+			<param-name>/client/edit</param-name>
 			<param-value>client/client.vm</param-value>
 		</init-param>
 	</servlet>
