Delete MappingServlet add capabilities to WkServlet
WkServlet takes over for MappingServlet in that it now checks the
init-params of a servlet for matching views. Views in web.xml must
have the format appended to them.

Fix a typo in client.vm causing the name of the client to not show
up.

Adjust ClientServlet to make use of new WkServlet functionality.

--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -60,11 +60,11 @@
 		<servlet-name>Client Basic</servlet-name>
 		<servlet-class>wknyc.web.servlets.ClientServlet</servlet-class>
 		<init-param>
-			<param-name>/client/list</param-name>
+			<param-name>/client/list/html</param-name>
 			<param-value>client/client-list.vm</param-value>
 		</init-param>
 		<init-param>
-			<param-name>/client/edit</param-name>
+			<param-name>/client/edit/html</param-name>
 			<param-value>client/client.vm</param-value>
 		</init-param>
 	</servlet>
