Add to ignore file so git and svn can co-exist peacefully

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
+.as3_classpath
 .classpath
 .project
 .session
 .settings
+ant
+bin/site
 derby.log
 nb-configuration.xml
 nbactions.xml
 project
+src/as
+src/fla
 src/main/resources/wknyc.properties
+src/psd
 tags
 target
 webapp/
