Update test properties so they all exist

--- a/src/test/resources/wknyc.properties
+++ b/src/test/resources/wknyc.properties
@@ -1,2 +1,6 @@
 org.apache.jackrabbit.repository.home=target/repository
 org.apache.jackrabbit.repository.conf=repository.mem.xml
+wknyc.uploads.downloads=webapp/assets/downloads
+wknyc.uploads.files=webapp/assets/files
+wknyc.uploads.images=webapp/assets/images
+wknyc.uploads.temp=webapp/assets/temp
