--- a/bin/WEB-INF/web.xml
+++ b/bin/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>login</servlet-name>
-		<url-pattern>/credentials/login/*</url-pattern>
+		<url-pattern>/user/login/*</url-pattern>
 	</servlet-mapping>
 <!-- Define Register Servlet -->
 	<servlet>
@@ -45,7 +45,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>registerUser</servlet-name>
-		<url-pattern>/credentials/register/*</url-pattern>
+		<url-pattern>/user/register/*</url-pattern>
 	</servlet-mapping>
 <!-- Define User Listing Servlet -->
 	<servlet>
