--- a/bin/WEB-INF/web.xml
+++ b/bin/WEB-INF/web.xml
@@ -93,18 +93,19 @@
 		<url-pattern>/casestudy/*</url-pattern>
 	</servlet-mapping>
 <!-- ** Client Servlets ** -->
+<!-- Define Client Listing Servlet -->
+	<servlet>
+		<servlet-name>Client List</servlet-name>
+		<servlet-class>wknyc.web.servlets.ClientListServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Client List</servlet-name>
+		<url-pattern>/client/list/*</url-pattern>
+	</servlet-mapping>
 <!-- Define Client Creation Servlet -->
 	<servlet>
 		<servlet-name>Client Basic</servlet-name>
 		<servlet-class>wknyc.web.servlets.ClientServlet</servlet-class>
-		<init-param>
-			<param-name>/client/list/html</param-name>
-			<param-value>client/client-list.vm</param-value>
-		</init-param>
-		<init-param>
-			<param-name>/client/list/json</param-name>
-			<param-value>client/client-list.json.vm</param-value>
-		</init-param>
 		<init-param>
 			<param-name>/client/edit/html</param-name>
 			<param-value>client/client.vm</param-value>
