--- a/bin/WEB-INF/web.xml
+++ b/bin/WEB-INF/web.xml
@@ -51,10 +51,6 @@
 	<servlet>
 		<servlet-name>editUser</servlet-name>
 		<servlet-class>wknyc.web.servlets.EditUserServlet</servlet-class>
-		<init-param>
-			<param-name>/user/edit/html</param-name>
-			<param-value>user/edit.html.vm</param-value>
-		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>editUser</servlet-name>
@@ -74,10 +70,6 @@
 	<servlet>
 		<servlet-name>CaseStudy List</servlet-name>
 		<servlet-class>wknyc.web.servlets.CaseStudyListServlet</servlet-class>
-		<init-param>
-			<param-name>/casestudy/list/json</param-name>
-			<param-value>casestudy/list.json.vm</param-value>
-		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>CaseStudy List</servlet-name>
@@ -106,14 +98,14 @@
 	<servlet>
 		<servlet-name>Client Basic</servlet-name>
 		<servlet-class>wknyc.web.servlets.ClientServlet</servlet-class>
-		<init-param>
-			<param-name>/client/edit/html</param-name>
-			<param-value>client/client.vm</param-value>
-		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Client Basic</servlet-name>
 		<url-pattern>/client/*</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Client Basic</servlet-name>
+		<url-pattern>/client/edit/*</url-pattern>
 	</servlet-mapping>
 <!-- ** Other Servlets ** -->
 <!-- Define Image Upload Servlet -->
