Define and implement ClientEditServlet
Add Client Edit servlet definition to web.xml. Implement
ClientEditServlet for the specific edit case. Create new view specific
to editing clients. Update CaseStudyServlet to fetch the payload of
ClientManager.get which now returns a Response object rather than a bare
Client. This should be 'safe' because the Client id is from a select
list.

--- a/bin/WEB-INF/web.xml
+++ b/bin/WEB-INF/web.xml
@@ -103,8 +103,13 @@
 		<servlet-name>Client Basic</servlet-name>
 		<url-pattern>/client/*</url-pattern>
 	</servlet-mapping>
+<!-- Define Client Edit Servlet -->
+	<servlet>
+		<servlet-name>Client Edit</servlet-name>
+		<servlet-class>wknyc.web.servlets.ClientEditServlet</servlet-class>
+	</servlet>
 	<servlet-mapping>
-		<servlet-name>Client Basic</servlet-name>
+		<servlet-name>Client Edit</servlet-name>
 		<url-pattern>/client/edit/*</url-pattern>
 	</servlet-mapping>
 <!-- ** Other Servlets ** -->
